✨ Add endpoints with otp code
