# docs/swagger.yaml
@@ -32,6 +32,30 @@ definitions:
     - new_password
     - old_password
     type: object
+  handler.confirmRegistrationRequest:
+    properties:
+      email:
+        example: test@example.com
+        type: string
+      otp:
+        example: "123456"
+        type: string
+    required:
+    - email
+    - otp
+    type: object
+  handler.confirmResetPasswordRequest:
+    properties:
+      email:
+        example: test@example.com
+        type: string
+      otp:
+        example: "123456"
+        type: string
+    required:
+    - email
+    - otp
+    type: object
   handler.createCollectionRequest:
     properties:
       description:
@@ -81,6 +105,31 @@ definitions:
     - email
     - name
     - password
+    type: object
+  handler.resetPasswordRequest:
+    properties:
+      email:
+        example: user@example.com
+        type: string
+    required:
+    - email
+    type: object
+  handler.setNewPasswordRequest:
+    properties:
+      email:
+        example: test@example.com
+        type: string
+      new_password:
+        example: newpassword
+        minLength: 8
+        type: string
+      otp:
+        example: "123456"
+        type: string
+    required:
+    - email
+    - new_password
+    - otp
     type: object
   handler.updateCollectionRequest:
     properties:
@@ -275,6 +324,76 @@ paths:
       summary: Change own password
       tags:
       - Authentication
+      x-order: 3
+  /auth/confirm-registration:
+    post:
+      consumes:
+      - application/json
+      description: Confirm user registration by providing the email and OTP code
+      parameters:
+      - description: Confirm registration request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.confirmRegistrationRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully confirmed registration
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Data not found error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Confirm user registration with OTP code
+      tags:
+      - Authentication
+      x-order: 2
+  /auth/confirm-reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Confirm password reset by providing the email and OTP code
+      parameters:
+      - description: Confirm password reset request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.confirmResetPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully confirmed password reset
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Data not found error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Confirm password reset with OTP code
+      tags:
+      - Authentication
   /auth/login:
     post:
       consumes:
@@ -308,6 +427,81 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Login and get an access token
+      tags:
+      - Authentication
+      x-order: "1"
+  /auth/request-reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Initiate the process of resetting a forgotten password by providing
+        the user's email
+      parameters:
+      - description: Request reset forgot password request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.resetPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Password reset request initiated successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: User not found error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Request to reset forgotten password
+      tags:
+      - Authentication
+  /auth/set-new-password:
+    put:
+      consumes:
+      - application/json
+      description: Reset user password by providing the email, new password, and OTP
+        code
+      parameters:
+      - description: Reset password request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.setNewPasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully reset password
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Data not found error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "422":
+          description: Passwords do not match
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Reset user password after confirmation with OTP code
       tags:
       - Authentication
   /collections:
